--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <p>"Are you a neural network? Because you've optimized my life."</p>
         <p>"Are you a GitHub repository? Because I want to commit to you."</p>
         <p>"I'd never 'Git Reset' a single moment with you."</p>
-        <p>"[Insert your personal line here...]"</p>
+        <p>"[love You snookums ..]"</p>
     </div>
 
     <div class="footer">
