--- a/index.html
+++ b/index.html
@@ -1,31 +1,62 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>For My Wifey</title>
-    <style>
-        body { background: #fff5f7; font-family: 'Segoe UI', sans-serif; text-align: center; padding: 20px; color: #d63384; }
-        .heart { font-size: 50px; animation: pulse 1.5s infinite; }
-        @keyframes pulse { 0% { transform: scale(1); } 50% { transform: scale(1.2); } 100% { transform: scale(1); } }
-        .lines { background: white; border-radius: 15px; padding: 20px; box-shadow: 0 4px 15px rgba(0,0,0,0.05); margin: 20px 0; }
-        p { font-style: italic; margin: 15px 0; border-bottom: 1px solid #ffeef2; padding-bottom: 5px; }
-        h1 { font-size: 1.5rem; }
-        .footer { font-weight: bold; font-size: 1.2rem; margin-top: 30px; }
-    </style>
-</head>
-<body>
-    <div class="heart">❤️</div>
-    <h1>Hey Meghana, I have a few things to say...</h1>
+<style>
+    /* Styling for the Surprise Button */
+    .magic-button {
+        background: linear-gradient(135deg, #ff4d94, #d63384);
+        color: white;
+        border: none;
+        padding: 15px 35px;
+        font-size: 1.1rem;
+        border-radius: 50px;
+        cursor: pointer;
+        box-shadow: 0 4px 15px rgba(214, 51, 132, 0.4);
+        transition: 0.4s ease;
+        margin: 30px 0;
+        font-weight: bold;
+    }
+    .magic-button:hover { transform: scale(1.05); box-shadow: 0 6px 20px rgba(214, 51, 132, 0.6); }
 
-    <div class="lines">
-        <p>"Are you a neural network? Because you've optimized my life."</p>
-        <p>"Are you a GitHub repository? Because I want to commit to you."</p>
-        <p>"I'd never 'Git Reset' a single moment with you."</p>
-        <p>"[love You snookums ..]"</p>
-    </div>
+    /* Hidden Timeline Section */
+    #memory-lane { display: none; margin-top: 20px; animation: slideUp 0.8s ease-out; }
+    @keyframes slideUp { from { opacity: 0; transform: translateY(20px); } to { opacity: 1; transform: translateY(0); } }
+    
+    .date-card {
+        background: white;
+        border-left: 5px solid #ff4d94;
+        margin: 15px auto;
+        padding: 20px;
+        max-width: 85%;
+        border-radius: 12px;
+        text-align: left;
+        box-shadow: 0 4px 12px rgba(0,0,0,0.08);
+    }
+    .date-title { font-weight: bold; color: #d63384; font-size: 1.1rem; display: block; margin-bottom: 5px; }
+    .date-desc { color: #555; font-size: 0.95rem; line-height: 1.4; }
+</style>
 
-    <div class="footer">
-        Love you my wifyy 💍
+<button class="magic-button" onclick="showMemories()">Click to See Our Journey ✨</button>
+
+<div id="memory-lane">
+    <div class="date-card">
+        <span class="date-title">September 17, 2020</span>
+        <p class="date-desc">The day it all began—our very first message. 📱</p>
     </div>
-</body>
-</html>
+    <div class="date-card">
+        <span class="date-title">October 22, 2020</span>
+        <p class="date-desc">The day I officially proposed and my life found its meaning. ❤️</p>
+    </div>
+    <div class="date-card">
+        <span class="date-title">August 2, 2024</span>
+        <p class="date-desc">Our first meeting. When I saw you for the first time, I could not believe my eyes—it felt like a dream come true. 🌟</p>
+    </div>
+</div>
+
+<script>
+    function showMemories() {
+        var x = document.getElementById("memory-lane");
+        x.style.display = "block";
+        // Smooth scroll to the new content
+        setTimeout(() => {
+            x.scrollIntoView({ behavior: 'smooth' });
+        }, 100);
+    }
+</script>
